# mdtraj-macos-test

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
test/: test_mdtraj.py
